--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <div id="intro" class="section">
                       <div class="encabezado menta">
                         <div class="fila1">
-                          <h1>La colonización verde de los llanos orientales</h1>
+                          <h1>La colonización "verde" de los llanos orientales</h1>
                         </div>
 
                         <div class="columnaA">
@@ -134,7 +134,7 @@
                         nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat
                         volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation</p>
                       </div>
-                      <div class="separador"></div>                    
+                      <div class="separador fondo_menta"></div>                    
                     </div>
                     <div id="tierras" class="section rosa">
                       <div class="texto">
@@ -200,9 +200,9 @@
                     <div id="equipo" class="section">
                       <div class="texto rosa">
                         <h2>Equipo</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat Lorem ipsum dolor sit amet, consectetue.</p>
-                        <div class="separador_rosa"></div>  
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat Lorem ipsum dolor sit amet, consectetue.</p>  
                       </div>
+                      <div class="separador fondo_mandarina"></div>
                     </div>
                 </div>
             </div>
