--- a/index.html
+++ b/index.html
@@ -122,24 +122,14 @@
                         </div>
                       </div>
                       <div class="intro">
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
-                        nonummy nibh euismod <a target="_blank" href="#" class="enlace">tincidunt ut laoreet dolore</a> magna aliquam erat
-                        volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation
-                        ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
-                        Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse
-                        molestie consequat, vel illum dolore eu feugiat nulla facilisis at
-                        vero eros et accumsan et iusto odio dignissim qui blandit praesent 
-                        luptatum zzril delenit ARTICULO 2 nulla facilisi.</p>
-
-                        <p>Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam
-                        nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat
-                        volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation</p>
+                        <p>En el departamento del Vichada ocurre una de las transformaciones ecológicas más grandes de Colombia. Decenas de miles de hectáreas de sabana han sido reemplazadas por inmensas plantaciones de eucalipto. Estos monocultivos son presentados por políticos y empresarios como un tesoro verde para enfrentar la crisis climática: como el futuro de la venta de bonos de carbono y la generación de energía renovable a partir de la madera de los árboles.</p>
+                        <p>Pero la promesa ambiental y de transición energética en este departamento fronterizo está sembrada sobre el despojo. Las plantaciones forestales ocupan cientos de terrenos destinados originalmente para la reforma agraria, acumulados por unos pocos privados. Las comunidades indígenas y campesinas sin tierra han sido desplazadas y encerradas por la expansión de las plantaciones. Y grupos económicos como la familia Santo Domingo se han aprovechado de la bandera de la energía limpia para hacer negocios a costa de la población.</p>
+                        <p>Este es un especial periodístico sobre las distintas caras de esa colonización “verde”. Una investigación sobre lo que está oculto bajo la sombra de los eucaliptos del Vichada<a target="_blank" href="#" class="enlace">.</a></p>
                       </div>
                       <div class="separador fondo_menta"></div>                    
                     </div>
                     <div id="tierras" class="section rosa">
-                      <div class="texto">
+                      <div class="intro">
                       <h2>Si te interesa el problema de tierras y pérdida de biodiversidad</h2>
                       <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat Lorem ipsum dolor sit amet, consectetue.</p>
                       </div>
@@ -181,9 +171,10 @@
                           <h3 class="title">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam non</h3>
                         </div>
                       </div>
+                      <div class="separador_peq rosa_tierra"></div>  
                     </div>
                     <div id="energia" class="section">
-                      <div class="texto menta">
+                      <div class="intro menta">
                         <h2>Si te interesa el negocio turbio de la energía en Vichada</h2>
                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat Lorem ipsum dolor sit amet, consectetue.</p>
                       </div>
@@ -211,7 +202,7 @@
                             </svg>
                             <div class="marker" >
                               <div class="dot"></div>
-                              <div class="label">río Orinoco</div>
+                              <div class="label">Río Orinoco</div>
                             </div> 
                           </div>
                           <div class="map-line-container" id="rio_mobile" data-aos="fade-right" data-aos-duration="2000">
@@ -224,7 +215,7 @@
                             </svg>
                             <div class="marker">
                               <div class="dot"></div>
-                              <div class="label">río Orinoco</div>
+                              <div class="label">Río Orinoco</div>
                             </div>
                           </div>
                         </div>
@@ -244,12 +235,14 @@
                         </article>
                         </div>
                       </div>
+                      <div class="separador_peq verde_empresa"></div> 
                     </div>
                     <div id="etica" class="section">
-                      <div class="texto rosa">
+                      <div class="intro rosa">
                         <h2>Si te interesan los dilemas éticos del periodismo</h2>
                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat Lorem ipsum dolor sit amet, consectetue.</p>
                         <div class="card_horizontal">
+                        </div>
                         <a href="#" target="_blank">
                           <article class="card_total" data-aos="fade-up" data-aos-duration="2000">
                             <div class="card_total__header">
@@ -263,11 +256,11 @@
                             </div>
                           </article>
                         </a>
-                        </div>
                       </div>
+                      <div class="separador_peq rosa_empresa"></div>
                     </div>
                     <div id="social" class="section">
-                      <div class="texto menta">
+                      <div class="intro menta">
                         <h2>Sigue la conversación</h2>
                         <p>Sigue cada paso de la conversación social que activa este especial en nuestras redes sociales.</p> 
                         <p>A continuación, listamos cada pieza en su canal principal de publicación, sin embargo, es posible encontrar varias de ellas también en otras plataformas.</p>
@@ -325,11 +318,16 @@
                           </article>
                         </a>
                       </div>
+                      <div class="separador_peq verde_tierra"></div> 
                     </div>
                     <div id="equipo" class="section">
-                      <div class="texto rosa">
+                      <div class="intro rosa">
                         <h2>Equipo</h2>
                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat Lorem ipsum dolor sit amet, consectetue.</p>  
+                        <div>
+                          <h4>Equipo de producción</h4>
+                          
+                        </div>
                       </div>
                       <div class="separador fondo_mandarina"></div>
                     </div>
