--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@
                   </div>
             </nav>
         <!-- Indicador lateral derecho -->
- 
         </header>
        
         <main>
@@ -136,7 +135,7 @@
                           <article class="card" data-aos="fade-up" data-aos-duration="2000">
                             <a href="#">
                               <div class="card__header">
-                                <img class="card__header-img" src="./assets/images/fotoprueba.jpg" alt="Reportaje de despojo de tierras para producir electricidad con biomasa en Vichada" width="150"/>
+                                <img class="card__header-img" src="./assets/images/tierras_banner.jpg" alt="Reportaje de despojo de tierras para producir electricidad con biomasa en Vichada" width="150"/>
                                 <small class="card__header-tag">Reportaje</small>
                                 <div class="card__header-title">
                                   <h3>El negocio de los árboles despoja la tierra del Vichada</h3>
@@ -164,14 +163,13 @@
                       </div>
                       <div class="youtube-wrapper" data-video-id="IL7qltb-sa4" data-aos="fade-up" data-aos-duration="2000">
                         <div class="youtube-thumbnail">
-                          <img src="./assets/images/fotoprueba.jpg" alt="Video Thumbnail">
+                          <img src="./assets/images/thumbnail_video.jpg" alt="Video Thumbnail">
                           <div class="play-button"></div>
                           <small class="tag">DOCUMENTAL</small>
                           <h3 class="title">El horizonte y la serpiente: las sombras del extractivismo “verde”</h3>
                         </div>
                       </div>
-
-                      <div class="separador_peq rosa_tierra"></div>  
+                      <div class="separador_peq rosa_tierra"></div> 
                     </div>
 
                     <div id="energia" class="section">
@@ -349,7 +347,7 @@
                           <p class="nombre">Elizabeth Otálvaro Vélez</p> 
                           <p class="nombre">Jeanneth Valdivieso</p> 
                           <p class="nombre">Lorena Meléndez</p> 
-                          <p class="subt">Conversación social (distribución en redes sociales):</p> 
+                          <p class="subt">Conversación social:</p> 
                           <p class="nombre">Karen Parrado Beltrán</p> 
                           <p class="cargo">Discusión y asesoría académica</p>  
                           <p class="nombre">Juan Felipe Riaño</p> 
@@ -357,8 +355,9 @@
                           <p class="nombre">Julio Arias Vanegas</p> 
                           </div>
                           <div>
-                          <p class="cargo">Diseño gráfico</p>  
+                          <p class="cargo">Coordinación gráfica</p> 
                           <p class="nombre">Wil Huertas</p> 
+                          <p class="cargo">Diseño</p>  
                           <p class="nombre">Matilde Salinas</p> 
                           <p class="nombre">Luisa Arango</p> 
                           <p class="cargo">Fotografía y realización audiovisual</p>  
