--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                       </div>
                       <div class="intro">
                         <p>En el departamento del Vichada ocurre una de las transformaciones ecológicas más grandes de Colombia. <b>Decenas de miles de hectáreas de sabana han sido reemplazadas por inmensas plantaciones de eucalipto</b>. Estos monocultivos son presentados por políticos y empresarios como un tesoro verde para enfrentar la crisis climática: como el futuro de la venta de bonos de carbono y la generación de energía renovable a partir de la madera de los árboles.</p>
-                        <p><b>Pero la promesa ambiental y de transición energética en este departamento fronterizo con Venezuela está sembrada sobre el despojo</b>. Las plantaciones forestales ocupan cientos de terrenos destinados originalmente para la reforma agraria y que actualmente están en manos de unos pocos privados.</p>
+                        <p><b>Pero la promesa ambiental y de transición energética en este departamento fronterizo con Venezuela está sembrada sobre el despojo</b>. Las plantaciones forestales ocupan cientos de terrenos de origen baldío habitados durante siglos por comunidades indígenas y que actualmente están en manos de unos pocos privados.</p>
                         <p>Las comunidades indígenas y campesinas han sido desplazadas y encerradas por la expansión de las plantaciones. <b>Grupos económicos como la familia Santo Domingo, uno de los cinco más ricos de Colombia, se han aprovechado de la bandera de la energía limpia para hacer negocios a costa de la población</b>.</p>
                         <p>Este es un especial periodístico sobre las distintas caras de esa colonización “verde”. Una investigación sobre lo que está oculto bajo la sombra de los eucaliptos del Vichada.</p>
                       </div>
@@ -278,11 +278,11 @@
                         <div class="card_horizontal">
                             <article class="card_total" data-aos="fade-up" data-aos-duration="2000">
                               <div class="card_total__header">
-                                <img class="card_total__header-img" src="./assets/images/fotoprueba.jpg" alt="Reportaje de despojo de tierras para producir electricidad con biomasa en Vichada"/>
+                                <img class="card_total__header-img" src="./assets/images/banner_informe.jpg" alt="Informe de conversación"/>
                                 <small class="card_total__header-tag">informe de conversación</small>
                               </div>
                               <div class="card_total__descrip">
-                                <h3 class="card_total__descrip-title">¿QUÉ APRENDIMOS DE LA PARTICIPACIÓN DE LAS AUDIENCIAS?</h3>
+                                <h3 class="card_total__descrip-title">¿qué aprendimos de la participación de las audiencias?</h3>
                                 <small class="card_total__descrip-autor">&#8250; Mutante</small>  
                                 <p>Espera aquí un análisis detallado de cómo se movió la opinión pública al rededor de este proyecto.</p>
                               </div>
@@ -358,7 +358,7 @@
                             <div class="logos__logo" data-aos="flip-left" data-aos-duration="1000"></div>
                           </div>
                           <div class="cierre moneda" data-aos="flip-right" data-aos-duration="1000"></div>
-                          <div class="cierre logo" data-aos="flip-right" data-aos-duration="1000"></div>
+                          <div class="cierrelogo" data-aos="flip-right" data-aos-duration="1000"></div>
                       </div>
                       </div>
                       <div class="separador fondo_mandarina"></div>
