--- a/viz/entramado-acaparamiento.html
+++ b/viz/entramado-acaparamiento.html
@@ -11,17 +11,17 @@
         <meta name="author" content="Mutante Org">
         <meta name="language" content="spanish">
         <meta property="og:site_name" content="Mutante | No es bosque, es despojo">
-        <meta property="og:title" content="Acaparamiento de tierras en El Vichada, region de los llanos orientales de Colombia.">
-        <meta property="og:description" content="Acaparamiento de tierras en El Vichada, region de los llanos orientales de Colombia.">
+        <meta property="og:title" content="Entramado de acaparamiento de tierras en El Vichada por parte de la empresa paisa Inverbosques.">
+        <meta property="og:description" content="Entramado de acaparamiento de tierras en El Vichada por parte de la empresa paisa Inverbosques.">
         <meta property="og:image" content="#">
-        <meta property="og:url" content="https://mutante.org/especiales/no-es-bosque-es-despojo/viz/entramado-acaparamiento-puerto-carreño">
+        <meta property="og:url" content="https://mutante.org/especiales/no-es-bosque-es-despojo/viz/entramado-acaparamiento">
         <meta property="og:type" content="article">
         <meta property="og:site_name" content="Mutante">
 
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="Mutante | No es bosque, es despojo">
-        <meta name="twitter:description" content="LLÉNAME">
-        <meta name="twitter:image" content="https://mutante.org/especiales/no-es-bosque-es-despojo/viz/entramado-acaparamiento-puerto-carreño">
+        <meta name="twitter:description" content="Entramado de acaparamiento de tierras en El Vichada por parte de la empresa paisa Inverbosques.">
+        <meta name="twitter:image" content="https://mutante.org/especiales/no-es-bosque-es-despojo/viz/entramado-acaparamiento">
         <meta name="twitter:site" content="@mutanteorg">
         
         <link rel="shortcut icon" href="../assets/images/favicon.png" type="image/x-icon"/>
