--- a/viz/iframe.html
+++ b/viz/iframe.html
@@ -8,7 +8,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
         
        <!-- mio -->
-       <link rel="stylesheet" href="../css/style.css"/>
+       <link rel="stylesheet" href="../css/iframe.css"/>
 
        <!-- CSS de AOS -->
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
