--- a/viz/iframe.html
+++ b/viz/iframe.html
@@ -10,8 +10,8 @@
        <!-- mio -->
        <link rel="stylesheet" href="../css/iframe.css"/>
 
-       <!-- CSS de AOS -->
-        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+       <!-- CSS de AOS 
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />-->
     </head>
     <body>
     <a href="https://mutante.org/especiales/no-es-bosque-es-despojo/" target="_blank" class="boton">
@@ -20,9 +20,9 @@
             <h1 class="cintillo__texto">aquí más contenido para que #HablemosDelVichada</h1>
         </div>
     </a>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <!--<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
           AOS.init();
-    </script>
+    </script>-->
 </body>
 </html>
