primera publicación en el servidor

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                       <div class="intro">
                         <p>En el departamento del Vichada ocurre una de las transformaciones ecológicas más grandes de Colombia. <b>Decenas de miles de hectáreas de sabana han sido reemplazadas por inmensas plantaciones de eucalipto</b>. Estos monocultivos son presentados por políticos y empresarios como un tesoro verde para enfrentar la crisis climática: como el futuro de la venta de bonos de carbono y la generación de energía renovable a partir de la madera de los árboles.</p>
                         <p><b>Pero la promesa ambiental y de transición energética en este departamento fronterizo con Venezuela está sembrada sobre el despojo</b>. Las plantaciones forestales ocupan cientos de terrenos de origen baldío habitados durante siglos por comunidades indígenas y que actualmente están en manos de unos pocos privados.</p>
-                        <p>Las comunidades indígenas y campesinas han sido desplazadas y encerradas por la expansión de las plantaciones. <b>Grupos económicos como la familia Santo Domingo, uno de los cinco más ricos de Colombia, se han aprovechado de la bandera de la energía limpia para hacer negocios a costa de la población</b>.</p>
+                        <p>Las comunidades indígenas y campesinas han sido desplazadas y encerradas por la expansión de las plantaciones. <b>Grupos económicos como el de la familia Santo Domingo, una de las cinco más ricas de Colombia, se han aprovechado de la bandera de la energía limpia para hacer negocios a costa de la población</b>.</p>
                         <p>Este es un especial periodístico sobre las distintas caras de esa colonización “verde”. Una investigación sobre lo que está oculto bajo la sombra de los eucaliptos del Vichada.</p>
                       </div>
                       <div class="separador fondo_menta"></div>                    
@@ -143,7 +143,7 @@
                           </article>
 
                           <article class="card" data-aos="fade-up" data-aos-duration="2000">
-                            <a href=" https://mutante.org/contenidos/la-sabana-encerrada/" target="_blank">
+                            <a href="https://mutante.org/contenidos/la-sabana-encerrada/" target="_blank">
                               <div class="card__header">
                                 <div class="card__header-img bngaleria"></div>
                                 <small class="card__header-tag">Galería</small>
@@ -157,7 +157,7 @@
                           </article>
                         </div>  
                       </div>
-                      <div class="youtube-wrapper" data-video-id="IL7qltb-sa4" data-aos="fade-up" data-aos-duration="2000">
+                      <div class="youtube-wrapper" data-video-id="FMdiF2gnN_U" data-aos="fade-up" data-aos-duration="2000">
                         <div class="youtube-thumbnail">
                           <div class="img"></div>
                           <div class="play-button"></div>
@@ -175,7 +175,7 @@
                         <div class="energia">
                           <div class="energia_col1">
                             <article class="card2" data-aos="fade-up" data-aos-duration="2000">
-                              <a href="#">
+                              <a href="https://mutante.org/contenidos/el-negocio-verde-de-los-santo-domingo-dejo-a-oscuras-vichada" target="_blank">
                                 <div class="card2__header">
                                   <div class="card2__header-img bncolombia"></div>
                                   <small class="card2__header-tag">Colombia</small>
@@ -215,7 +215,7 @@
                           </div>
                           <div class="energia_col3">
                           <article class="card2" data-aos="fade-up" data-aos-duration="2000">
-                            <a href="#">
+                            <a href="https://mutante.org/contenidos/puerto-paez-el-punto-brillante-que-se-veia-desde-colombia-se-apaga" target="_blank">
                               <div class="card2__header">
                                 <div class="card2__header-img bnvenezuela"></div>
                                 <small class="card2__header-tag">Venezuela</small>
@@ -262,14 +262,26 @@
                         <p>Este especial periodístico es el corazón de una conversación social, una estrategia participativa y multiformato en plataformas como <a class="enlace" href="https://www.instagram.com/mutanteorg/" target="_blank">Instagram</a>, <a class="enlace" href="https://x.com/MutanteOrg" target="_blank">Twitter</a>, <a class="enlace" href="https://www.facebook.com/MutanteOrg" target="_blank">Facebook</a> y <a class="enlace" href="https://www.tiktok.com/@mutanteorg?lang=es" target="_blank">Tik-tok</a>, así como en nuestro <a class="enlace" href="https://whatsapp.com/channel/0029VajjsQM5PO0sgKcY5a2d" target="_blank">canal de Whatsapp</a>.</p> 
                         <p>Para participar, solo hay que comentar los contenidos en tu red social favorita o usar el #HablemosDeTransiciónEnergética.</p>
                         <div class="ruta">
-                          <a href="https://www.instagram.com/p/DJXCYenAlo5/?img_index=1" target="_blank">
+                          <a href="https://www.instagram.com/mutanteorg/" target="_blank">
                           <div class="ruta__pieza" data-aos="fade-up" data-aos-duration="1000">
                             <div class="ruta__pieza-header">
                             <div class="ruta__pieza-header-img pieza1"></div>
                             </div>
                             <div class="ruta__pieza-descrip">
+                              <span>fase: HABLAR</span>
+                              <p>Declaración de intenciones y pregunta de expectativa</p>
+                              <small>&#8250; junio 7 de 2025</small>
+                            </div>
+                          </div>
+                          </a>
+                          <a href="https://www.instagram.com/mutanteorg/" target="_blank">
+                          <div class="ruta__pieza" data-aos="fade-up" data-aos-duration="1000">
+                            <div class="ruta__pieza-header">
+                            <div class="ruta__pieza-header-img pieza2"></div>
+                            </div>
+                            <div class="ruta__pieza-descrip">
                               <span>fase: COMPRENDER</span>
-                              <p>nombre de la activacion o pregunta</p>
+                              <p>Activación con hallazgos del especial</p>
                               <small>&#8250; junio 9 de 2025</small>
                             </div>
                           </div>
@@ -319,7 +331,6 @@
                           <p class="subt">Conversación social:</p> 
                           <p class="nombre">Karen Parrado Beltrán</p> 
                           <p class="cargo">Discusión y asesoría académica</p>  
-                          <p class="nombre">Juan Felipe Riaño</p> 
                           <p class="nombre">Fernando López Vega</p> 
                           <p class="nombre">Julio Arias Vanegas</p> 
                           </div>
