--- a/index.html
+++ b/index.html
@@ -35,8 +35,17 @@
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
        <!-- mio -->
-       <link rel="stylesheet" href="./css/style.css"/>
+       <link rel="stylesheet" href="./css/styling.css"/>
        <script src="./scripts/script.js" defer></script>
+
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-X48ETMDLHE"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-X48ETMDLHE');
+        </script> 
 
     </head>
     <body>
@@ -260,9 +269,9 @@
                       <div class="intro menta">
                         <h2>Sigue la conversación</h2>
                         <p>Este especial periodístico es el corazón de una conversación social, una estrategia participativa y multiformato en plataformas como <a class="enlace" href="https://www.instagram.com/mutanteorg/" target="_blank">Instagram</a>, <a class="enlace" href="https://x.com/MutanteOrg" target="_blank">Twitter</a>, <a class="enlace" href="https://www.facebook.com/MutanteOrg" target="_blank">Facebook</a> y <a class="enlace" href="https://www.tiktok.com/@mutanteorg?lang=es" target="_blank">Tik-tok</a>, así como en nuestro <a class="enlace" href="https://whatsapp.com/channel/0029VajjsQM5PO0sgKcY5a2d" target="_blank">canal de Whatsapp</a>.</p> 
-                        <p>Para participar, solo hay que comentar los contenidos en tu red social favorita o usar el #HablemosDeTransiciónEnergética.</p>
+                        <p>Para participar, solo hay que comentar los contenidos en tu red social favorita o usar el #HablemosDelVichada.</p>
                         <div class="ruta">
-                          <a href="https://www.instagram.com/mutanteorg/" target="_blank">
+                          <a href="https://www.instagram.com/p/DKmp8BBsgXj/?img_index=1" target="_blank">
                           <div class="ruta__pieza" data-aos="fade-up" data-aos-duration="1000">
                             <div class="ruta__pieza-header">
                             <div class="ruta__pieza-header-img pieza1"></div>
@@ -274,7 +283,7 @@
                             </div>
                           </div>
                           </a>
-                          <a href="https://www.instagram.com/mutanteorg/" target="_blank">
+                          <a href="https://www.instagram.com/p/DKrXt9vs_Iv/?img_index=1" target="_blank">
                           <div class="ruta__pieza" data-aos="fade-up" data-aos-duration="1000">
                             <div class="ruta__pieza-header">
                             <div class="ruta__pieza-header-img pieza2"></div>
@@ -283,6 +292,30 @@
                               <span>fase: COMPRENDER</span>
                               <p>Activación con hallazgos del especial</p>
                               <small>&#8250; junio 9 de 2025</small>
+                            </div>
+                          </div>
+                          </a>
+                          <a href="https://www.instagram.com/p/DKvO24HMbJJ/?img_index=1" target="_blank">
+                          <div class="ruta__pieza" data-aos="fade-up" data-aos-duration="1000">
+                            <div class="ruta__pieza-header">
+                            <div class="ruta__pieza-header-img pieza3"></div>
+                            </div>
+                            <div class="ruta__pieza-descrip">
+                              <span>fase: HABLAR</span>
+                              <p>Retratos de la transformación en el foto ensayo "La Sabana Encerrada"</p>
+                              <small>&#8250; junio 10 de 2025</small>
+                            </div>
+                          </div>
+                          </a>
+                          <a href="https://www.instagram.com/p/DK0Z5YVPkYJ/?img_index=1" target="_blank">
+                          <div class="ruta__pieza" data-aos="fade-up" data-aos-duration="1000">
+                            <div class="ruta__pieza-header">
+                            <div class="ruta__pieza-header-img pieza4"></div>
+                            </div>
+                            <div class="ruta__pieza-descrip">
+                              <span>fase: COMPRENDER</span>
+                              <p>Línea de tiempo: los discursos oficiales han querido borrar los Llanos desde hace más de 200 años</p>
+                              <small>&#8250; junio 12 de 2025</small>
                             </div>
                           </div>
                           </a>
