--- a/viz/entramado-acaparamiento.html
+++ b/viz/entramado-acaparamiento.html
@@ -31,7 +31,16 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
         
        <!-- mio -->
-       <link rel="stylesheet" href="../css/style.css"/>
+       <link rel="stylesheet" href="../css/styling.css"/>
+
+           <script async src="https://www.googletagmanager.com/gtag/js?id=G-X48ETMDLHE"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-X48ETMDLHE');
+        </script> 
     </head>
     <body>
         <header class="header">
